[package]
name = "cargo-rcurl"
version = "0.0.36"
edition = "2024"
description = "A modern, feature-rich curl alternative written in Rust"
license = "MIT"
repository = "https://github.com/lsk569937453/rcurl"
homepage = "https://github.com/lsk569937453/rcurl"
documentation = "https://docs.rs/cargo-rcurl"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rcurl"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.101"
async-tls = "=0.13.0"
bytes = "=1.11.1"
chrono = "=0.4.43"
clap = { version = "=4.5.57", features = ["derive", "string"] }
env_logger = "=0.11.8"
form-data-builder = "=1.0.1"
futures = "=0.3.31"
futures-util = { version = "=0.3.31", default-features = false }
hickory-resolver = "=0.25.2"
http = "=1.4.0"
http-body-util = { version = "=0.1.3" }
http-range-header = "=0.4.2"
hyper = { version = "=1.8.1", features = ["full"] }
hyper-rustls = { version = "=0.27.7", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
    "http1",
    "http2",
] }
hyper-util = { version = "=0.1.20", features = ["full"] }
indicatif = "=0.18.3"
inquire = "=0.9.3"
log = "=0.4.29"
mime_guess = "=2.0.5"
netstat2 = "=0.11"
ping = "=0.7.0"
pki-types = { package = "rustls-pki-types", version = "=1.14.0" }
rayon = "=1.11.0"
rustls = { version = "=0.23.36", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }
rustls-pemfile = "=2.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
shell-words = "=1.1.1"
suppaftp = { version = "=8.0.1", features = ["rustls-ring"] }
sysinfo = "0.38"
telnet = "=0.2.4"
tokio = { version = "=1.49.0", features = ["full"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = [
    "logging",
    "ring",
] }
tokio-util = { version = "=0.7.18", features = ["full", "time"] }
tower-service = "=0.3.3"
tracing = { version = "=0.1.44" }
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
url = "=2.5.8"
walkdir = "=2.5.0"
webpki-roots = "=1.0.6"
x509-parser = "=0.18.1"
[target.'cfg(unix)'.dependencies]
sysinfo = "0.38"

# Cross-platform socket information library
